--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "gutenberg-app",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Project Gutenberg is a platform to download and access free e-books. We're looking to build a web application that allows users to explore and analyze books from Project Gutenberg. ",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node src/index.ts",
@@ -11,8 +11,8 @@
     "docker:build": "docker build -t gutenberg-app .",
     "docker:run": "docker run -p 3000:3000 gutenberg-app"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["Project", "Gutenberg"],
+  "author": "Allyn j. Alford",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.7",
