--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "docker:build": "docker build -t gutenberg-app .",
     "docker:run": "docker run -p 3000:3000 gutenberg-app"
   },
-  "keywords": ["Project", "Gutenberg"],
+  "keywords": [
+    "Project",
+    "Gutenberg"
+  ],
   "author": "Allyn j. Alford",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.7",
     "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-basic-auth": "^1.2.1",
     "sqlite": "^5.1.1",
